// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency currency format with separators 1`] = `
<span
  className="Text__P-sc-c94f3cf-0-span layReX"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  $
  42
</span>
`;

exports[`Currency currency format with separators 2`] = `
<span
  className="Text__P-sc-c94f3cf-0-span layReX"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  $
  19 000
</span>
`;

exports[`Currency currency format with separators 3`] = `
<span
  className="Text__P-sc-c94f3cf-0-span layReX"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  $
  19,000
</span>
`;

exports[`Currency renders default options 1`] = `
<span
  className="Text__P-sc-c94f3cf-0-span layReX"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  $42
</span>
`;

exports[`Currency renders default options 2`] = `
<span
  className="Text__P-sc-c94f3cf-0-span layReX"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  19 000 $
</span>
`;
